dnl $Id: configure.in 712 2002-08-30 23:23:12Z marvin $

AC_INIT(arping2.c)
AC_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_INSTALL

AC_PROG_GCC_TRADITIONAL
if test "$GCC" = yes ; then
    CFLAGS="$CFLAGS -Wall"
fi

AC_CHECK_HEADERS(net/bpf.h)

AC_MSG_CHECKING(If this is WeirdBSD)
case `uname -s` in
     *BSD)
	AC_DEFINE(HAVE_WEIRD_BSD, 1, [define if you have WeirdBSD])
	AC_MSG_RESULT(yes)
	;;
     *)
        AC_MSG_RESULT(no)
	;;
esac

AC_MSG_CHECKING(for explicit size type support)
AC_TRY_COMPILE(
	[#include <sys/types.h>],
	[u_int32_t foo;],
	AC_DEFINE(HAVE_ESIZE_TYPES, 1, [Define this if your system has u_int32_t and such])
	AC_MSG_RESULT(yes),
	AC_MSG_RESULT(no))

AC_PREFIX_DEFAULT(/usr/local)

AC_OUTPUT(config.h)
